--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "cypress": "^12.0.0 || ^13.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run --component",
+    "type-check": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "cypress-geolocation-locale-faker": "^1.0.0"
   }
 }
