--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "cypress": "^12.0.0 || ^13.0.0"
   },
   "scripts": {
-    "test": "cypress run --component",
-    "type-check": "tsc --noEmit"
+    "start-server": "http-server public -p 8080",
+    "test": "start-server-and-test start-server http://127.0.0.1:8080 'cypress run --spec cypress/e2e/example_spec.cy.js'"
   },
   "devDependencies": {
-    "cypress-geolocation-locale-faker": "^1.0.0"
+    "cypress-geolocation-locale-faker": "^1.0.0",
+    "start-server-and-test": "^2.0.12"
   }
 }
